// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletCreateRestoreSuccess should match create wallet snapshot 1`] = `
<RCTScrollView
  contentContainerStyle={{}}
  style={
    [
      [
        {},
        {
          "paddingBottom": 100,
          "paddingTop": 100,
        },
      ],
      {},
    ]
  }
  testID="wallet_create_success"
>
  <View>
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Wallet created!
      </Text>
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Access decentralized finance with Bitcoin-grade security, strength and immutability.
      </Text>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={{}}
      >
        <Image
          resizeMode="cover"
          source={1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "height": undefined,
                "width": undefined,
              },
              {},
            ]
          }
        />
        <Image
          source={1}
          style={
            {
              "height": 332,
              "width": 750,
            }
          }
        />
        <View
          style={{}}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 26,
                "opacity": 1,
              }
            }
            testID="continue_button"
          >
            <Text
              style={
                [
                  {},
                  {},
                ]
              }
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`WalletCreateRestoreSuccess should match restore wallet snapshot 1`] = `
<RCTScrollView
  contentContainerStyle={{}}
  style={
    [
      [
        {},
        {
          "paddingBottom": 100,
          "paddingTop": 100,
        },
      ],
      {},
    ]
  }
  testID="wallet_restore_success"
>
  <View>
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Wallet restored!
      </Text>
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        Access decentralized finance with Bitcoin-grade security, strength and immutability.
      </Text>
    </View>
    <View
      style={{}}
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={{}}
      >
        <Image
          resizeMode="cover"
          source={1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "height": undefined,
                "width": undefined,
              },
              {},
            ]
          }
        />
        <Image
          source={1}
          style={
            {
              "height": 332,
              "width": 750,
            }
          }
        />
        <View
          style={{}}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "borderRadius": 26,
                "opacity": 1,
              }
            }
            testID="continue_button"
          >
            <Text
              style={
                [
                  {},
                  {},
                ]
              }
            >
              Continue
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
